--- a/reserva_automovel_frontend/src/app/globals.css
+++ b/reserva_automovel_frontend/src/app/globals.css
@@ -19,3 +19,47 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Navbar Container */
+.navbar-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 64px; /* Largura da Navbar */
+  background-color: white;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+  z-index: 100; /* Garante que ficará acima do conteúdo */
+  transition: transform 0.2s ease-in-out;
+}
+
+/* Conteúdo da Navbar */
+.nav-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+/* Links da Navbar */
+.nav-link {
+  width: 100%;
+  height: 64px; /* Espaço para cada item de navegação */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.nav-link:hover {
+  background-color: #f0f0f0;
+}
+
+/* Ícones da Navbar */
+.nav-icon {
+  width: 24px;
+  height: 24px;
+  fill: #333;
+}
